@@ -44,11 +44,7 @@ public class ProductMapper {
       .energyClass(entity.getEnergyClass())
       .linkEprel(generateEprelUrl(entity.getProductGroup(), entity.getEprelCode()))
       .batchName(CATEGORIES_TO_IT_P.get(entity.getCategory())+"_"+entity.getProductFileId()+".csv")
-      .productName(
-        CATEGORIES_TO_IT_S.get(entity.getCategory()) +" " +
-        entity.getBrand()+" "+
-        entity.getModel()
-      )
+      .productName(entity.getProductName())
       .capacity(("N\\A").equals(entity.getCapacity()) ? null : entity.getCapacity())
       .build();
   }
@@ -65,10 +61,19 @@ public class ProductMapper {
       .brand(csvRecord.get(BRAND))
       .model(csvRecord.get(MODEL))
       .capacity("N\\A")
+      .productName(CATEGORIES_TO_IT_S.get(COOKINGHOBS) +" "+
+        csvRecord.get(BRAND)+" "+
+        csvRecord.get(MODEL)
+      )
       .build();
   }
 
   public static Product mapEprelToProduct(CSVRecord csvRecord, EprelProduct eprelData, String orgId, String productFileId, String category) {
+    String capacity = mapCapacity(category,eprelData);
+    String productName = CATEGORIES_TO_IT_S.get(category) + " " +
+      eprelData.getSupplierOrTrademark() + " " +
+      eprelData.getModelIdentifier() +
+      (!"N\\A".equals(capacity) ? " " + capacity : "");
     return Product.builder()
       .productFileId(productFileId)
       .organizationId(orgId)
@@ -83,7 +88,8 @@ public class ProductMapper {
       .brand(eprelData.getSupplierOrTrademark())
       .model(eprelData.getModelIdentifier())
       .energyClass(mapEnergyClass(eprelData.getEnergyClass()))
-      .capacity(mapCapacity(category,eprelData))
+      .capacity(capacity)
+      .productName(productName)
       .build();
   }
 
@@ -148,7 +154,7 @@ public class ProductMapper {
         .setTrim(true)
         .build();
       List<CSVRecord> records = format.parse(new StringReader(out.toString())).getRecords();
-      return records.isEmpty() ? null : records.get(0);
+      return records.isEmpty() ? null : records.getFirst();
     } catch (Exception e) {
       return null;
     }
